[tool.poetry]
name = "bf-survey"
version = "0.1.0"
description = ""
authors = ["Misha Evtikhiev <mikhail.evtikhiev@jetbrains.com>"]
readme = "README.md"
packages = [{include = "bf_survey"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
